fetching info from allocine

--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -9,3 +9,16 @@
     {{label}}
   {{/each}}
 {{/with}}
+
+{{#each showtimes}}
+  <p>
+    {{movie.title}}
+  </p>
+  {{#each scr}}
+    <p>
+      {{d}}
+      at
+      {{#each t}}{{this.$}}, {{/each}}
+    </p>
+  {{/each}}
+{{/each}}
