correcting cinema lookup

--- a/views/calendar/index.hbs
+++ b/views/calendar/index.hbs
@@ -12,6 +12,6 @@
   <p>
     {{showtime.cinema.name}}
     {{showtime.cinema.address}}
-    {{showtime.cinema.postal_code}}
+    {{showtime.cinema.zipcode}}
   </p>
 {{/each}}
