--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,6 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='ie=edge' />
     <title>{{appTitle}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/calendar.css' />
     <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
   </head>
 
@@ -13,6 +14,7 @@
     <nav>
       {{#if isUserLoggedIn}}
         <a href='/auth/logout'>Logout</a>
+        <a href='/calendar'>My Calendar</a>
       {{else}}
         <a href='/auth/login'>Login</a>
         <a href='/auth/signup'>Signup</a>
