--- a/views/calendar/index.hbs
+++ b/views/calendar/index.hbs
@@ -9,8 +9,10 @@
 
       {{#each this}}
         <div class='calendar-entry'>
-          <h3>
+          <h3 class='showtime'>
             {{showtime.movie.title}}
+            at
+            {{showtime.timeString}}
           </h3>
           <picture>
             <img
@@ -18,13 +20,17 @@
               alt='{{showtime.movie.title}}'
             />
           </picture>
-          <p>
-            {{showtime.startTime}}
-          </p>
-          <p>
-            {{showtime.cinema.name}}
-            {{showtime.cinema.address}}
-            {{showtime.cinema.zipcode}}
+
+          <p class='showtimes'>
+            <span class='showtime'>
+              {{showtime.cinema.name}}
+            </span>
+            <span class='showtime'>
+              {{showtime.cinema.address}}
+            </span>
+            <span class='showtime'>
+              {{showtime.cinema.zipcode}}
+            </span>
           </p>
         </div>
       {{/each}}
