added a bad title

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,8 +9,8 @@
     <link rel='stylesheet' href='/stylesheets/calendar.css' />
     <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
   </head>
-
   <body>
+  <h1>Hello hackers !</h1>
     {{#> toast}}
       Congratulations!
     {{/toast}}
