cloudinary profile picture upload

--- a/views/calendar/index.hbs
+++ b/views/calendar/index.hbs
@@ -1,4 +1,8 @@
 <h1>Your calendar</h1>
+<picture>
+  <img src='{{profilePictureUrl}}' alt='your lovely face' />
+</picture>
+
 <div class='calendar'>
   {{#each calendarByDay}}
     <div class='calendar-date'>
