--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,14 +1,20 @@
-<form action="/auth/signup" method="POST">
-   <label> Username
-      <input type="text" name="username">
-   </label>
-   <label> Password
-      <input type="password" name="password">
-   </label>
+<form action='/auth/signup' enctype='multipart/form-data' method='POST'>
+  <label>
+    Username
+    <input type='text' name='username' />
+  </label>
+  <label>
+    Password
+    <input type='password' name='password' />
+  </label>
+  <label>
+    Profile picture
+    <input type='file' name='profile-picture' />
+  </label>
 
-   <button type="submit">Submit</button>
+  <button type='submit'>Submit</button>
 </form>
 
 {{#if errorMessage}}
-   {{errorMessage}}
+  {{errorMessage}}
 {{/if}}
