correcting cinema view link

--- a/views/cinema/index.hbs
+++ b/views/cinema/index.hbs
@@ -2,7 +2,7 @@
   {{#each cinemas}}
     <li class='cinema'>
       <h2>
-        <a href='/cinema/{{id}}'>
+        <a href='/cinema/{{_id}}'>
           {{name}}
         </a>
       </h2>
