--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -21,26 +21,22 @@
   <p>
     {{movie.title}}
   </p>
-  {{#each scr}}
-    <p>
-      {{d}}
-      at
-    </p>
-    <ul class='showtimes'>
-      {{#each t}}
-        <li class='showtime'>
-          <h3>
-            {{$}}
-          </h3>
-          {{#if @root.isUserLoggedIn}}
-            <button data-showtime='{{code}}'>
-              Add this to your calendar
-            </button>
-          {{/if}}
-        </li>
-      {{/each}}
-    </ul>
-  {{/each}}
+  <ul class='showtimes'>
+    {{#each showtimes}}
+      <li class='showtime'>
+        <h3>
+          {{date startTime}}
+          at
+          {{time startTime}}
+        </h3>
+        {{#if @root.isUserLoggedIn}}
+          <button data-showtime='{{code}}'>
+            Add this to your calendar
+          </button>
+        {{/if}}
+      </li>
+    {{/each}}
+  </ul>
 {{/each}}
 
 <script src='/js/cinema/view.js'></script>
