--- a/views/cinema/viewByDate.hbs
+++ b/views/cinema/viewByDate.hbs
@@ -1,5 +1,5 @@
 {{#with cinema}}
-  <h2>{{name}}</h2>
+  <h1>{{name}}</h1>
   <p>
     {{address}},
     {{city}}
@@ -15,28 +15,44 @@
       </li>
     {{/each}}
   </ul>
+  <p>
+    <a href='/cinema/{{_id}}'>
+      View listings by movie
+    </a>
+  </p>
 {{/with}}
 
-{{#each showtimes}}
-  <p>
-    {{this._id}}
-  </p>
-  <ul class='showtimes'>
-    {{#each showtimes}}
-      <li class='showtime'>
-        <h3>
-          {{movie.title}}
-          at
-          {{time startTime}}
-        </h3>
-        {{#if @root.isUserLoggedIn}}
-          <button data-showtime='{{code}}'>
-            Add this to your calendar
-          </button>
-        {{/if}}
-      </li>
-    {{/each}}
-  </ul>
-{{/each}}
+<div class='showtimes-grouping'>
+  {{#each showtimes}}
+    <div class='showtime-for-group'>
+      <div class='group-heading'>
+        <h2>
+          {{this._id}}
+        </h2>
+      </div>
+      <ul class='showtimes'>
+        {{#each showtimes}}
+          <li class='showtime'>
+            <h3>
+              {{time startTime}}:
+              {{movie.title}}
+            </h3>
+            <div>
+              <picture>
+                <img src='{{movie.poster}}' alt='{{movie.title}}' />
+              </picture>
+
+            </div>
+            {{#if @root.isUserLoggedIn}}
+              <button data-showtime='{{_id}}'>
+                +<span class='sr-only'>Add this to your calendar</span>
+              </button>
+            {{/if}}
+          </li>
+        {{/each}}
+      </ul>
+    </div>
+  {{/each}}
+</div>
 
 <script src='/js/cinema/view.js'></script>
