--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,19 +24,18 @@
       </nav>
     </header>
     <main>
-
       {{{body}}}
     </main>
 
     <footer>
-      This website is not commercial in any way.
+      This website is not commercial in any way. For full licence information, find <a href="https://gtihub.com/rjkerrison/ciaocine">the project on Github</a>. &copy; Robin James Kerrison 2022
     </footer>
 
     {{#> toast}}
       Congratulations!
     {{/toast}}
 
-    <script src='/js/script.js'></script>
+    <script type="module" src='/js/script.js'></script>
   </body>
 
 </html>
