--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,5 @@
-<h1>{{appTitle}}</h1>
-<p>For finding cinema screenings in Paris.</p>
+<h2>{{appTitle}}</h2>
+<p>{{pageSubtitle}}</p>
 <div class='random-screening'>
   {{#with showtime}}
     <h2>
