--- a/views/partials/addToCalendar.hbs
+++ b/views/partials/addToCalendar.hbs
@@ -1,4 +1,4 @@
-{{#if @root.isUserLoggedIn}}
+{{#if @root.user.isLoggedIn}}
   <button class='add-to-calendar' data-showtime='{{showtime._id}}'>
     +<span class='sr-only'>Add this to your calendar</span>
   </button>
