--- a/views/partials/favouriteCinema.hbs
+++ b/views/partials/favouriteCinema.hbs
@@ -1,4 +1,4 @@
-{{#if @root.isUserLoggedIn}}
+{{#if @root.user.isLoggedIn}}
   <button
     class='favourite-cinema'
     data-cinema='{{cinema._id}}'
