--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -141,7 +141,18 @@ picture img {
   transition: all 500ms;
 }
 
-.cinema:hover .overlay {
+.movie-showtime .overlay {
+  /* right: 0;
+  top: 0;
+  left: unset;
+  height: 100%;
+  width: unset; */
+  display: flex;
+  align-items: center;
+}
+
+.cinema:hover .overlay,
+.movie-showtime:hover .overlay {
   opacity: 1;
 }
 
@@ -212,4 +223,27 @@ button.favourite-cinema:hover {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+.movies {
+  display: grid;
+  grid-template: auto / repeat(auto-fill, minmax(20rem, 1fr));
+}
+
+.movie-showtimes {
+  display: grid;
+  grid-template: auto / repeat(auto-fill, minmax(7rem, 1fr));
+}
+
+.movie-showtime {
+  padding: 1rem;
+  position: relative;
+}
+
+.movie-showtime .extra-info {
+  display: none;
+}
+
+.movie-showtime:hover .extra-info {
+  display: block;
 }
