--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -235,7 +235,7 @@ button.favourite-cinema:hover {
   margin: 0;
   text-overflow: ellipsis;
   overflow: hidden;
-  height: 100%;
+  max-height: 100%;
 }
 
 .movie-showtime h3,
@@ -245,6 +245,8 @@ button.favourite-cinema:hover {
 
 .movie-showtime:hover .extra-info {
   display: block;
+  width: 100%;
+  text-align: center;
 }
 
 .movie-showtime .overlay {
@@ -263,4 +265,19 @@ button.add-to-calendar {
   position: absolute;
   top: -1rem;
   right: -1rem;
+}
+
+.movie-showtime .overlay {
+  height: 100%;
+  z-index: 1;
+  top: 0;
+  transform: rotateX(0.5turn);
+}
+
+.movie-showtime {
+  transition: all 1s;
+}
+
+.movie-showtime:hover .overlay {
+  transform: rotateX(1turn);
 }
