ugc illimité filter

--- a/views/movies/index.hbs
+++ b/views/movies/index.hbs
@@ -3,6 +3,7 @@
 <a href="{{previousDayUrl}}">Previous day</a>
 <a href="{{afterworkUrl}}">Showings only after 6pm</a>
 <a href="{{nextDayUrl}}">Next day</a>
+<a href="{{ugcIllimiteUrl}}">Only show cinemas accepting UGC Illimité</a>
 </nav>
 <div class='movies'>
   {{#each movies}}
