--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,6 +2,7 @@
   <h1>Ciaocine: {{pageTitle}}</h1>
   <nav aria-label='main navigation'>
     <a href='/cinema'>Cinemas</a>
+    <a href='/movies'>Movies</a>
   </nav>
   <div class="account-header">
     {{#if @root.user.isLoggedIn}}
