splitting css into files

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,8 +4,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <meta http-equiv='X-UA-Compatible' content='ie=edge' />
     <title>{{appTitle}} — {{pageSubtitle}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/calendar.css' />
+    <link rel='stylesheet' href='/stylesheets/index.css' />
     <script src='https://unpkg.com/axios/dist/axios.min.js'></script>
   </head>
   <body>
