--- a/views/movies/index.hbs
+++ b/views/movies/index.hbs
@@ -1,4 +1,4 @@
-<h1>All movies showing on {{weekdaydate chosenDate}}</h1>
+<h2>{{movies.length}} movies are showing on {{weekdaydate chosenDate}} matching your filters</h2>
 <nav>
 <a href="{{previousDayUrl}}">Previous day</a>
 <a href="{{afterworkUrl}}">Showings only after 6pm</a>
@@ -7,42 +7,44 @@
 </nav>
 <div class='movies'>
   {{#each movies}}
-    <div class='movie'>
+    <div class='movie overlay-container'>
       {{#with movie}}
-      <h2 class='calendar-head'>
-        {{title}}
-      </h2>
-      <picture>
-        <img
-          src='{{poster}}'
-          alt='{{title}}'
-        />
-      </picture>
+        <h2 class='movie-heading'>
+          {{title}}
+        </h2>
+        <picture class="poster">
+          <img
+            src='{{poster}}'
+            alt='{{title}}'
+          />
+        </picture>
       {{/with}}
 
-      <div class='movie-showtimes' data-calendar='{{_id}}'>
+      <div class='movie-showtimes'>
         {{#each showtimes}}
-          <div class='movie-showtime' data-calendar='{{_id}}'>
+          <div class='movie-showtime overlay-container'>
             <h3>
               {{time startTime}}
             </h3>
             <div class="overlay">
-              {{> addToCalendar}}
+              {{> addToCalendar showtime=_id}}
               <p class="extra-info">
                 <span>
                   {{cinema.name}}
                 </span>
-                {{!-- <span>
-                  {{cinema.address}}
-                </span>
-                <span>
-                  {{cinema.zipcode}}
-                </span> --}}
               </p>
             </div>
           </div>
         {{/each}}
       </div>
+
+      {{#ifGreaterThan showtimes.length 4}}
+        <div class="overlay">
+          <button class="expand-showtimes">
+            Show more
+          </button>
+        </div>
+      {{/ifGreaterThan}}
     </div>
   {{/each}}
 </div>
