--- a/views/calendar/index.hbs
+++ b/views/calendar/index.hbs
@@ -1,4 +1,4 @@
-<h1>Your calendar</h1>
+<h2>Your saved screenings</h2>
 <div class='calendar'>
   {{#each calendarByDay}}
     <div class='calendar-date'>
