--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -1,5 +1,5 @@
 {{#with cinema}}
-  <h1>{{name}}</h1>
+  <h2>Showtimes for {{name}}</h2>
   <p>
     {{address}},
     {{city}}
@@ -24,9 +24,9 @@
   {{#each showtimes}}
     <div class='showtime-for-group'>
       <div class='group-heading'>
-        <h2>
+        <h3>
           {{movie.title}}
-        </h2>
+        </h3>
         <picture>
           <img src='{{movie.poster}}' alt='{{movie.title}}' />
         </picture>
