--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,2 +1,2 @@
-<h1>Error!</h1>
-<h2>There was an error on the server! Check the console!</h2>
+<h2>Internal Server Error</h2>
+<p>There has been an error. Try returning to <a href='/'>the home page</a>.</p>
