--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -3,19 +3,25 @@
 }
 
 body {
-  padding: 50px;
+  padding: 0;
+  margin: 0;
   font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
   background-image: linear-gradient(#1c153a 0, #34276c 50vh, #533ea7 100vh);
   background-attachment: fixed;
   color: #e6e3f4;
 }
 
+main {
+  padding: 1rem 2rem;
+}
+
 a {
   color: #00b7ff;
 }
 
-h1 {
-  color: 15px;
+h2,
+h3 {
+  font-family: 'Courier New', Courier, monospace;
 }
 
 picture {
