--- a/views/not-found.hbs
+++ b/views/not-found.hbs
@@ -1,3 +1,4 @@
-<h1>404 Error</h1>
-<h2>This route does not exist on the app! Check if everything is ok! Check your routes to see what might have happened
-</h2>
+<h2>404 Error</h2>
+<p>This route does not exist on the app! Check if everything is ok! Check your
+  routes to see what might have happened
+</p>
