--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
     </main>
 
     <footer>
-      This website is not commercial in any way. For full licence information, find <a href="https://gtihub.com/rjkerrison/ciaocine">the project on Github</a>. &copy; Robin James Kerrison 2022
+      This website is not commercial in any way. For full licence information, find&nbsp;<a href="https://gtihub.com/rjkerrison/ciaocine">the project on Github</a>. &copy; Robin James Kerrison 2022
     </footer>
 
     {{#> toast}}
