--- a/views/cinema/index.hbs
+++ b/views/cinema/index.hbs
@@ -1,3 +1,4 @@
+<section>
 <ul class='cinema-list'>
   {{#each cinemas}}
     <li class='cinema'>
@@ -25,3 +26,4 @@
     </li>
   {{/each}}
 </ul>
+</section>
