--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -1,3 +1,4 @@
+<section>
 {{#with cinema}}
   <h2>Showtimes for {{name}}</h2>
   <p>
@@ -46,3 +47,4 @@
     </div>
   {{/each}}
 </div>
+</section>
