--- a/views/movies/index.hbs
+++ b/views/movies/index.hbs
@@ -1,3 +1,5 @@
+
+<section>
 <h2>{{movies.length}} movies are showing on {{weekdaydate chosenDate}} matching your filters</h2>
 <nav>
 <a href="{{previousDayUrl}}">Previous day</a>
@@ -48,3 +50,4 @@
     </div>
   {{/each}}
 </div>
+</section>
