--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,3 +1,4 @@
+<section>
 <form action="/auth/login" method="POST">
    <label> Username
       <input type="text" name="username">
@@ -12,3 +13,4 @@
 {{#if errorMessage}}
    {{errorMessage}}
 {{/if}}
+<section>
