--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,20 +1,22 @@
-<form action='/auth/signup' enctype='multipart/form-data' method='POST'>
-  <label>
-    Username
-    <input type='text' name='username' />
-  </label>
-  <label>
-    Password
-    <input type='password' name='password' />
-  </label>
-  <label>
-    Profile picture
-    <input type='file' name='profile-picture' />
-  </label>
+<section>
+  <form action='/auth/signup' enctype='multipart/form-data' method='POST'>
+    <label>
+      Username
+      <input type='text' name='username' />
+    </label>
+    <label>
+      Password
+      <input type='password' name='password' />
+    </label>
+    <label>
+      Profile picture
+      <input type='file' name='profile-picture' />
+    </label>
 
-  <button type='submit'>Submit</button>
-</form>
+    <button type='submit'>Submit</button>
+  </form>
 
-{{#if errorMessage}}
-  {{errorMessage}}
-{{/if}}
+  {{#if errorMessage}}
+    {{errorMessage}}
+  {{/if}}
+</section>
