--- a/views/cinema/viewByDate.hbs
+++ b/views/cinema/viewByDate.hbs
@@ -39,7 +39,7 @@
             </h3>
             <div>
               <picture>
-                <img src='{{movie.poster}}' alt='{{movie.title}}' />
+                <img src='{{stripProtocol movie.poster}}' alt='{{movie.title}}' />
               </picture>
             </div>
             {{> addToCalendar showtime=this}}
