--- a/views/movies/index.hbs
+++ b/views/movies/index.hbs
@@ -16,7 +16,7 @@
         </h2>
         <picture class="poster">
           <img
-            src='{{poster}}'
+            src='{{stripProtocol poster}}'
             alt='{{title}}'
           />
         </picture>
