--- a/views/partials/profilePicture.hbs
+++ b/views/partials/profilePicture.hbs
@@ -1,6 +1,6 @@
 <picture>
   <img
-    src='{{@root.user.profilePictureUrl}}'
+    src='{{stripProtocol @root.user.profilePictureUrl}}'
     alt='{{@root.user.username}} profile picture'
   />
 </picture>
