stripping protocol from images on index pages

--- a/views/cinema/view.hbs
+++ b/views/cinema/view.hbs
@@ -29,7 +29,7 @@
           {{movie.title}}
         </h3>
         <picture>
-          <img src='{{movie.poster}}' alt='{{movie.title}}' />
+          <img src='{{stripProtocol movie.poster}}' alt='{{movie.title}}' />
         </picture>
       </div>
       <ul class='showtimes'>
