--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,6 +19,6 @@
       <strong>{{date startTime}}</strong>?
       {{> addToCalendar showtime=_id}}
     </p>
-    <picture><img src='{{movie.poster}}' alt='{{movie.title}}' /></picture>
+    <picture><img src='{{stripProtocol movie.poster}}' alt='{{movie.title}}' /></picture>
   {{/with}}
 </section>
