--- a/views/calendar/index.hbs
+++ b/views/calendar/index.hbs
@@ -17,7 +17,7 @@
             </h3>
             <picture>
               <img
-                src='{{showtime.movie.poster}}'
+                src='{{stripProtocol showtime.movie.poster}}'
                 alt='{{showtime.movie.title}}'
               />
             </picture>
