--- a/public/stylesheets/movies.css
+++ b/public/stylesheets/movies.css
@@ -1,3 +1,7 @@
+section.movies-section h2 {
+  font-size: 3rem;
+}
+
 .movies {
   display: grid;
   grid-template: auto / repeat(auto-fill, minmax(30rem, 1fr));
@@ -97,4 +101,37 @@
   position: absolute;
   top: -1rem;
   right: -1rem;
+}
+
+/* Movies filters */
+.movies-filters {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.25rem;
+}
+
+.movies-filter {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #3f3275;
+  padding: 1rem;
+  transition: all 1s;
+  border-radius: 0.25rem;
+  color: white;
+}
+
+.movies-filter:hover {
+  background-color: #725cc9;
+}
+
+.movies-filter.selected {
+  background-color: #73c973;
+  color: #3f3275;
+}
+
+.movies-filter.selected:hover {
+  background-color: #725cc9;
+  color: white;
 }
