--- a/public/stylesheets/popup.css
+++ b/public/stylesheets/popup.css
@@ -13,6 +13,7 @@
 .popup {
   width: 50%;
   background: #8ad38a;
+  color: #3f3275;
   box-shadow: 0.5rem 0.5rem 0.25rem -0.25rem #8ad38a67;
   padding: 1rem;
   border-radius: 1rem;
