--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,24 +1,37 @@
 .app-header {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   background-color: #34276c;
   font-family: Courier, 'Courier New', monospace;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  z-index: 1;
 }
 
 .app-header h1 {
-  padding: 1rem;
+  height: 5rem;
+  padding: 0.5rem;
   margin: 0;
-  font-size: 2rem;
+  font-size: 1.75rem;
+}
+
+.app-header nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .account-header {
   display: flex;
   height: 4rem;
   gap: 1rem;
-  background-image: linear-gradient(90deg, #533ea7, #29a929);
-  border-radius: 0.5rem;
+  background-image: linear-gradient(90deg, #597823, #29a929);
   padding: 0.5rem;
 }
 
@@ -40,4 +53,21 @@
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+@media screen and (min-width: 600px) {
+  .app-header {
+    flex-direction: row;
+    align-items: center;
+    font-size: 1.5rem;
+  }
+
+  .app-header h1 {
+    padding: 1rem;
+    font-size: 2rem;
+  }
+
+  .app-header nav {
+    flex-direction: row;
+  }
 }
